fix navigation collapsing

--- a/src/css/darkmode.scss
+++ b/src/css/darkmode.scss
@@ -1,4 +1,4 @@
-@import "vars";
+@import 'vars';
 
 body.darkmode {
   background-color: $darkmode-background;
@@ -6,7 +6,14 @@ body.darkmode {
     background-color: #ddd !important;
   }
 
-  h1, h2, h3, h4, h5, h6, p, .control-label {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  .control-label {
     color: $darkmode-text;
   }
   .popover {
@@ -43,7 +50,7 @@ body.darkmode {
   }
   .dropdown-menu {
     background-color: $darkmode-background;
-    li>a {
+    li > a {
       color: $darkmode-text;
       &:hover {
         background-color: $darkmode-darker-background;
@@ -64,10 +71,11 @@ body.darkmode {
     color: $darkmode-text;
     background-color: $darkmode-background;
   }
-  .table-striped>tbody>tr:nth-of-type(odd) {
+  .table-striped > tbody > tr:nth-of-type(odd) {
     background-color: $darkmode-darker-background;
   }
-  .ReactModal__Content, .modal-content {
+  .ReactModal__Content,
+  .modal-content {
     color: $darkmode-text;
     background-color: $darkmode-background !important;
   }
@@ -81,8 +89,44 @@ body.darkmode {
     background-color: $darkmode-darker-background;
   }
 
-  .ReactModal__Content, .modal-content {
+  .ReactModal__Content,
+  .modal-content {
     color: $darkmode-text;
     background-color: $darkmode-background !important;
+  }
+}
+
+.container-with-sub-nav.darkmode {
+  background-color: $darkmode-darker-border;
+}
+
+.navbar-inverse {
+  .nav.navbar-nav {
+    li.dropdown {
+      & > a {
+        background-color: $darkmode-background;
+        border: 1px solid $darkmode-darker-border;
+      }
+      ul {
+        background-color: $darkmode-background;
+        li > a {
+          color: $darkmode-text;
+        }
+        li:first-child {
+          background-color: $darkmode-darker-background;
+
+          & > a:hover,
+          &:hover {
+            background-color: $darkmode-background;
+          }
+        }
+      }
+    }
+    li.dropdown.open {
+      & > a {
+        background-color: $darkmode-background;
+        color: $darkmode-text;
+      }
+    }
   }
 }
